--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,8 @@
     },
     "scripts": {
         "test": "phpunit",
-        "check-style": "phpcs -p --standard=PSR2 src/ tests/",
-        "fix-style": "phpcbf -p --standard=PSR2 src/ tests/"
+        "check-style": "phpcs -p src/ tests/",
+        "fix-style": "phpcbf -p src/ tests/"
     },
     "config": {
         "sort-packages": true
