--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,11 @@
     ],
     "require": {
         "php": ">= 7",
-        "illuminate/cache": "^5.6,<5.9",
-        "illuminate/support": "^5.6,<5.9"
+        "illuminate/cache": "^5.6,<5.10",
+        "illuminate/support": "^5.6,<5.10"
     },
     "require-dev": {
+        "illuminate/contracts": "^5.6,<5.10",
         "phpunit/phpunit": "~7.0",
         "squizlabs/php_codesniffer": "^3"
     },
