--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,24 @@ php:
   - 7.1
   - 7.2
   - 7.3
+  - 7.4
 
 env:
   matrix:
     - LARAVEL=5.6.*
     - LARAVEL=5.7.*
     - LARAVEL=5.8.*
+    - LARAVEL=^6
+    - LARAVEL=^7
     - LARAVEL=dev-master
 
 matrix:
   fast_finish: true
   exclude:
+    - php: 7.1
+      env: LARAVEL=^6
+    - php: 7.1
+      env: LARAVEL=^7
     - php: 7.1
       env: LARAVEL=dev-master
   allow_failures:
