--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
     ],
     "require": {
         "php": ">= 7.1",
-        "illuminate/cache": "^5.6,<5.10",
-        "illuminate/support": "^5.6,<5.10"
+        "illuminate/cache": "^5.6|^6|^7",
+        "illuminate/support": "^5.6|^6|^7"
     },
     "require-dev": {
-        "illuminate/contracts": "^5.6,<5.10",
+        "illuminate/contracts": "^5.6|^6|^7",
         "phpunit/phpunit": "~7.0",
         "squizlabs/php_codesniffer": "^3"
     },
