--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ language: php
 sudo: false
 
 php:
-  - 7.1
   - 7.2
   - 7.3
   - 7.4
@@ -15,16 +14,15 @@ env:
     - LARAVEL=5.8.*
     - LARAVEL=^6
     - LARAVEL=^7
+    - LARAVEL=^8
     - LARAVEL=dev-master
 
 matrix:
   fast_finish: true
   exclude:
-    - php: 7.1
-      env: LARAVEL=^6
-    - php: 7.1
-      env: LARAVEL=^7
-    - php: 7.1
+    - php: 7.3
+      env: LARAVEL=^8
+    - php: 7.3
       env: LARAVEL=dev-master
   allow_failures:
     - env: LARAVEL=dev-master
