--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
         }
     ],
     "require": {
-        "php": ">= 7.2",
+        "php": ">= 7.3",
         "illuminate/cache": "^5.6|^6|^7|^8",
         "illuminate/support": "^5.6|^6|^7|^8"
     },
     "require-dev": {
-        "illuminate/contracts": "^5.6|^6|^7|^8",
+        "illuminate/contracts": "^8",
         "phpunit/phpunit": "~9.0",
         "squizlabs/php_codesniffer": "^3"
     },
